fix: remove is-visible

--- a/src/frontend/components/molecules/search/search.molecule.css
+++ b/src/frontend/components/molecules/search/search.molecule.css
@@ -41,6 +41,6 @@
 .skill-search + .skill-value {
     display: none;
 }
-.is-visible{
+/* .is-visible{
     background-color: rgb(214, 1, 132);
-}
+} */
